[package]
name = "mystery_dungeon"
version = "0.1.0"
edition = "2021"
default-run = "mystery_dungeon"

[[bin]]
name = "map_viewer"
path = "src/debug/map_viewer.rs"



[dependencies]
eframe = "0.22.0"
rand = "0.8.5"
bevy = { version = "0.11.0", features = ["dynamic_linking"]}
bevy_egui = "0.21.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3